--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -100,7 +100,7 @@
     <para>
       With the second page you select which standard phrase books you need.
       From the phrase books you later can select often used phrases so that
-      you do not need to type them in. Off course &kmouth; also has an edit
+      you do not need to type them in. Of course &kmouth; also has an edit
       dialog for the case that you later want to edit your phrase books.
     </para>
   </sect1>
